- Add footer__content class in index file - Create a header height variable in _variables file - Remove margin left-right on mobile resolutin on class row in grid lib - Fix header height on mobile and tablet - Margin left-right for app__container-content - Align center for all of footer's item

--- a/NewHTMLCSS/assets/style/_variables.scss
+++ b/NewHTMLCSS/assets/style/_variables.scss
@@ -15,3 +15,6 @@ $header-height-mobile-tablet : 68px;
 $navbar-height-mobile-tablet : 0px;
 $header-search-mobile-tablet : calc(#{$header-height-mobile-tablet} - #{$navbar-height-mobile-tablet});
 $header-sort-bar-height      : 46px;
+
+$header-height-mobile : 54px;
+$header-search-mobile : calc(#{$header-height-mobile} - #{$navbar-height-mobile-tablet});
