--- a/NewHTMLCSS/assets/style/grid.scss
+++ b/NewHTMLCSS/assets/style/grid.scss
@@ -32,10 +32,10 @@
     margin-left : -4px;
     margin-right: -4px;
 
-    @include mobile {
-        margin-left : 0;
-        margin-right: 0;
-    }
+    // @include mobile {
+    //     margin-left : 0;
+    //     margin-right: 0;
+    // }
 
     /* >= Tablet */
     @media (min-width: 740px) {
